# grin-node-docker

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  grin-node-docker.pro  nginx.conf  nginx.conf.template  qml.qrc  res.qrc  start.sh
.github/workflows/: docker-multiarch.yaml
docs/: flowchart.drawio  flowchart_system.drawio  fundingrequest.docx
qml/: Block.qml  Chain.qml  DarkButton.qml  ErrorOverlay.qml  Explorer.qml  Header.qml  HeaderBar.qml  Home.qml  I18n.qml  Kernel.qml  Main.qml  Map.qml  NodeConfig.qml  Output.qml  PeerListView.qml  PeerMarker.qml  Peers.qml  Pool.qml  Price.qml  QRGen.js  Settings.qml  SidebarButton.qml  StatusView.qml  Transaction.qml  Utxo.qml  Wallet.qml
qml/translation/: de.json  en.json  es.json  fr.json  it.json  ja.json  nl.json  ru.json  tr.json  zh.json
src/: main.cpp
src/config/: config.cpp  config.h
src/geo/: geolookup.cpp  geolookup.h
src/grinnodemanager/: grinnodemanager.cpp  grinnodemanager.h
src/priceanalysis/: priceanalysismanager.cpp  priceanalysismanager.h
